# serializable-datatypes

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  example.py  pyproject.toml
dtstruct/: __init__.py  basic.py  basic.pyi  core.py  core.pyi
serializabledt/: __init__.py  adapter.py  builder.py  core.py  core.pyi  template.py  transformer.py  utils.py
