[tool.poetry]
name = "serializabledt"
version = "0.1.0"
description = ""
authors = ["Lucino772 <lucapalmi772@gmail.com>"]
readme = "README.md"
packages = [{include = "serializabledt"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
nox = "^2022.8.7"
towncrier = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
