[tool.poetry]
name = "serializabledt"
version = "0.1.0"
description = ""
authors = ["Lucino772 <lucapalmi772@gmail.com>"]
readme = "README.md"
packages = [{include = "serializabledt"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
nox = "^2022.8.7"
towncrier = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | docs
)/
'''

[tool.towncrier]
name = "serializabledt"
directory = "changes"
package = "serializabledt"
filename = "CHANGELOG.rst"
issue_format = "`#{issue} <https://github.com/Lucino772/serializable-datatypes/issues/{issue}>`_"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=./ --cov-report=xml ./tests"

[tool.mypy]
show_error_codes = true
warn_unused_configs = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "serializabledt"
disallow_untyped_decorators = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
implicit_reexport = false
strict_equality = true