[tool.poetry]
name = "dtstruct"
version = "0.1.0"
description = ""
authors = ["Lucino772 <lucapalmi772@gmail.com>"]
readme = "README.md"
packages = [{include = "dtstruct"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
nox = "^2022.8.7"
towncrier = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | docs
)/
'''

[tool.towncrier]
name = "dtstruct"
directory = "changes"
package = "dtstruct"
filename = "CHANGELOG.rst"
issue_format = "`#{issue} <https://github.com/Lucino772/serializable-datatypes/issues/{issue}>`_"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=./ --cov-report=xml ./tests"
